# FleetOps-Security-Service

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run.ps1  sonar-project.properties
.github/workflows/: cd.yml  ci.yml
api_gateway/: .coveragerc  .dockerignore  .importlinter  Dockerfile  conftest.py  pytest.ini  requirements.txt
api_gateway/app/: config.py  main.py
api_gateway/app/domain/: __init__.py  rbac_policy.py  route_registry.py
api_gateway/app/infrastructure/http/: internal_client.py
api_gateway/app/middleware/: __init__.py  jwt_middleware.py  rate_limit.py
api_gateway/app/routes/: __init__.py  auth_routes.py  proxy_routes.py
api_gateway/app/schemas/: __init__.py  gateway_schemas.py
api_gateway/app/services/: __init__.py  role_validation_client.py
api_gateway/tests/: __init__.py  test_jwt_middleware.py  test_main.py  test_proxy_routes.py  test_rbac_policy.py  test_route_registry.py
app/: main.py
app/infrastructure/http/: internal_client.py
auth_service/: .coveragerc  .dockerignore  .importlinter  Dockerfile  alembic.ini  conftest.py  entrypoint.sh  pytest.ini  requirements.txt
auth_service/alembic/: env.py  script.py.mako
auth_service/alembic/versions/: 001_create_users_table.py  0c2fee775deb_cambiar_role_a_role_id.py
auth_service/app/: __init__.py  config.py  main.py  seed_admin.py
auth_service/app/api/: __init__.py  routes.py  schemas.py
auth_service/app/domain/: __init__.py  auth_service.py  jwt_handler.py  user.py
auth_service/app/infrastructure/: __init__.py  database.py  models.py  user_repository.py
auth_service/tests/: __init__.py  test_auth_service.py  test_jwt_handler.py  test_routes.py  test_user_entity.py  test_user_repository.py
role_service/: .coveragerc  .importlinter  Dockerfile  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
role_service/alembic/: env.py
role_service/alembic/versions/: 001_create_roles_tables.py  002_add_new_system_role.py
role_service/app/: __init__.py  config.py  main.py
role_service/app/api/: __init__.py  routes.py  schemas.py
role_service/app/domain/: __init__.py  role.py  role_service.py
role_service/app/infrastructure/: __init__.py  database.py  models.py  redis_client.py  role_repository.py
role_service/tests/: __init__.py  test_role_entity.py  test_role_repository.py  test_role_service.py
scripts/: generate-internal-certs.sh
shared_testing/: rsa_keys.py
